<resources>
    <string name="app_name">MovieApp</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="message_before_quit">Press back one more time before quit</string>
    <string name="poster_description">Movie Poster</string>

    <string name="no_overview">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.
    </string>
    <string name="no_title">No Title</string>
    <string name="no_genres">No Genre</string>
    <string name="latest_movie">Latest Movie</string>
    <string name="refresh_latest_movie">Refresh Latest Movie</string>

    <string name="network_error">Something went wrong</string>
    <string name="delete_list">Delete List</string>
    <string name="refresh_list">Refresh List</string>
    <string name="no_desc">No Description</string>
    <string name="filter_genre">Filter Genre</string>
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
    <string name="button_filter_text">Filter</string>
    <string name="btn_cancel_text">Cancel</string>
    <string name="text_budget">Budget</string>
    <string name="text_vote_count">Vote Count</string>
    <string name="text_revenue">Revenue</string>
    <string name="text_original_lang">Original Language</string>
    <string name="text_popularity">Popularity</string>
    <string name="similar_movie">Similar Movie</string>
    <string name="user_review">User Review</string>
    <string name="btn_see_all">See All</string>
</resources>