<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_popular_movie"
            android:contentDescription="@string/popular"
            android:icon="@drawable/ic_popular"
            android:title="@string/popular" />
        <item
            android:id="@+id/fragment_now_playing"
            android:contentDescription="@string/now_playing"
            android:icon="@drawable/ic_now_playing"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/fragment_top_rated"
            android:contentDescription="@string/top_rated"
            android:icon="@drawable/ic_top_rated"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/fragment_upcoming"
            android:contentDescription="@string/upcoming"
            android:icon="@drawable/ic_upcoming"
            android:title="@string/upcoming" />
    </group>
</menu>